* gc.c (HEAP_OBJ_LIMIT, HEAP_BITMAP_LIMIT): HEAP_OBJ_LIMIT used   `sizeof(struct heaps_slot)` while heap is currently allocated   with `struct heaps_header`.   HEAP_BITMAP_LIMIT were calculated from   `HEAP_OBJ_LIMIT/sizeof(uintptr_t)` - one Byte for each object,   not one Bit. [Bug #6006]   patched by Sokolov Yura. https://github.com/ruby/ruby/pull/92

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34581 b2dd03c8-39d4-4d8f-98ff-823fe69b080e